--- a/store/templates/product_detail.html
+++ b/store/templates/product_detail.html
@@ -4,7 +4,24 @@
 
 {% block content %}
 <body>
-
-{{ product }}
+    <p style="margin-top: 10px; margin-left: 5px; font-weight: bold;">
+        <a href="{% url 'index' %}" class="on_main_page">На главную</a><br>
+        <a href="{{ request.META.HTTP_REFERER }}" class="on_main_page">Назад</a>
+    </p>
+<div id="product_detail">
+    <a href="{% url 'product_detail' product.id %}">
+        <img src="{{ product.image.url }}" style="width:25vh; height:25vh;"><br>
+    </a>
+    <p style="font-size: 20px">{{ product.name }}</p>
+    <p style="font-size: 22px">{{ product.price }} руб.</p>
+    {% if product.quantity < 10 %}
+    <p style="font-size: 22px;">Осталось: <strong style="color: red;">{{ product.quantity }} шт.</strong></p>
+    {% else %}
+    <p style="font-size: 22px;">Осталось: {{ product.quantity }} шт.</p>
+    {% endif %}
+    <h3>Описание товара</h3>
+    <p class="product_description">{{ product.description }}</p>
+    Дата публикации {{ product.published_at }}
+</div>
 </body>
 {% endblock %}
