--- a/store/templates/product_cat.html
+++ b/store/templates/product_cat.html
@@ -9,19 +9,18 @@
 {% for category in categories %}
     <p style="margin-top: 10px; margin-left: 5px; font-weight: bold;">
         <a href="{% url 'index' %}" class="on_main_page">На главную</a><br>
-        {{ category.title }}
     </p>
+    <p style="text-align: center; font-size: 35px;">{{ category.title }}</p>
     <section class="mt-5 pt-3">
         <div class="row mb-0">
-            <div class="col-4 col-md-6 col-lg-3" style="height: 0;">
         {% for product in products %}
             {% if category.id == product.category_id %}
-                <div style="margin-left: 30px">
+                <div id="cat_product">
                 <a href="{% url 'product_detail' product.id %}">
-                    <img src="{{ product.image.url }}" style="width:15vh; height:15vh;"><br>
+                    <img id='cat_image' src="{{ product.image.url }}" style="width:15vh; height:15vh;"><br>
                 </a>
-                {{ product.name }}<br>
-                {{ product.price }}<br>
+                <p style="font-size: 20px">{{ product.name }}</p>
+                <p style="font-size: 22px">{{ product.price }} руб.</p>
                 </div>
             {% endif %}
         {% endfor %}
