--- a/store/static/store/css.css
+++ b/store/static/store/css.css
@@ -95,3 +95,45 @@
 	text-decoration: none;
 	color: #1d1d1d;
 }
+.dropdown{
+    position: relative;
+    word-wrap: break-word;
+    display: inline-block;
+    float: right;
+    margin-right: 75px;
+}
+
+.dropdown-menu{
+    background-color: black;
+    padding: 5px 10px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+    border-radius: 7px;
+    visibility: hidden;
+    opacity: 0;
+    z-index: -1;
+
+}
+
+.dropdown-menu.show{
+    z-index: 99;
+    visibility: visible;
+    opacity: 1;
+    background-color: whitesmoke;
+}
+
+.dropdown-menu a{
+    display: block;
+    opacity: 0.7;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    background-color: whitesmoke;
+}
+
+.dropdown-menu a:hover{
+    display: block;
+    opacity: 1;
+    text-decoration: none;
+    color: black;
+}
+
