--- a/templates/base.html
+++ b/templates/base.html
@@ -11,5 +11,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'store/css.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="shortcut icon" href="https://clck.ru/32hdFE" type="image/png">
-</html>
+    <link rel="shortcut icon" href="https://clck.ru/32nKqc" type="image/png">
