--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -4,59 +4,39 @@
 Your shopping cart
 {% endblock %}
 {% block content %}
-<body style="background-color: whitesmoke;">
-<h1>Корзина</h1>
-    <div class="item">
+
+<body>
+    <h1> Корзина </h1>
         {% if cart|length > 0 %}
-        <p style="float: right; font-weight: bolder ;color: black; text-decoration-line: none">
+        <p style="font-weight: bolder ;color: black;">
             Товары: {{ cart|length }} шт.
             ({{ cart.get_total_price }} руб)
         </p>
-
-            <ul style="
-                list-style-type: none;
-                padding-left: 91px;
-                width: 335px;
-                background-color: white;
-                margin-left: 40%;
-                ">
+        <ul style="list-style-type: none; display: flex; ">
             {% for item in cart %}
             {% with product=item.product %}
-            <div style="border-bottom: 1px silver solid; width: 5px;">
-                <li style="font-weight: bolder; font-size: 20px">{{ product.name }}</li>
-            <form action="{% url 'cart_add' product.id %}" method="post">
-                <div style="background-color: white; margin-left: 180px; margin-right: 180px;">
-                    {% csrf_token %}
-                    {% for field in form %}
-                    <div class="form-group"></div>
-                    <div>{{ field }}</div>
-                    {% endfor %}
-                    <div class="buttons">
-                        <button type="submit" class="btn btn-warning">+</button>
-                        <a class="btn btn-warning" href="{% url 'cart_remove_few' product.id %}">-</a>
-                        <a class="" href="{% url 'cart_remove_all' product.id %}">Удалить</a>
-                    </div>
-                    <div class="image">
-                        <img style="width:15vh; height:15vh; margin-left: 40vw;" src="{{ product.image.url }}">
-                    </div>
-                    <div class="description">
-                        <span>{{ product.name }}</span>
-                        <span>кол-во {{ item.quantity }}</span>
-                    </div>
-                    <div class="total-price">{{ item.total_price }}</div>
+            <form action="{% url 'cart_add' product.id %}" method="post" >
+                <div class="row mb-0" style="margin-left: 50px; border: 1px solid black;">
+                {% csrf_token %}
+                    <li><img src="{{ product.image.url }}" style="width:15vh; height: auto;"></li>
+                Кол-во {{ item.quantity }}
                 </div>
+                <p style="text-align: center;">{{ product.name }}</p>
+                {% for field in form %}
+                <div class="form-group" style="margin-left: 50px">{{ field }}</div>
+                {% endfor %}
+                    <button type="submit" class="btn btn-success">+</button>
+                    <a class="btn btn-danger" href="{% url 'cart_remove_few' product.id %}">-</a>
+                    <a class="btn btn-danger" href="{% url 'cart_remove_all' product.id %}">Удалить</a>
+                <div class="total-price">{{ item.total_price }}</div>
             </form>
-            {% endwith %}
-            {% endfor %}
-            <li class="total">
-                <td> Общая стоимость:</td>
-                <td colspan="4"></td>
-                <td class="num">{{ cart.get_total_price }} руб</td>
-            </li>
-        </ul>
-        {% else %}
-        Тут пусто
-        {% endif %}
-    </div>
+
+    {% endwith %}
+    {% endfor %}<br>
+    </ul>
+
+    {% else %}
+    Тут пусто
+    {% endif %}
 </body>
 {% endblock %}
