--- a/templates/store/products.html
+++ b/templates/store/products.html
@@ -4,6 +4,21 @@ List
 {% endblock %}
 {% block content %}
 <body style="background-color: whitesmoke;">
+<p style="text-align: center; font-size: 35px;">{{ category.title }}</p>
+    <main class="container mt-3">
+ <form class="form-inline mb-3" action="{% url 'search' %}" method="get">
+    <div class="form-group col-8 col-md-10 pl-0">
+        <input class="form-control w-100" type="search"  type="text" placeholder="Поиск по сайту"
+               aria-label="Поиск по сайту" name="search">
+    </div>
+    <div class="form-group col-4 col-md-2 pl-0">
+        <button class="btn btn-info" type="submit">Найти</button>
+    </div>
+    </form>
+    <p>Например:
+        <a href="#" class="text-dark border-bottom border-dark m-2 text-decoration-none">Samsung</a>
+        <a href="#" class="text-dark border-bottom border-dark m-2 text-decoration-none">Dualsense</a>
+</main>
 {% for product in products %}
 <main class="container mt-3" style="text-align: center; max-width: 500px;">
     <div style="border: 5px solid white; background-color: white;">
