--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         {% endfor %}
-         <a href="{% url 'products' %}" style="text-decoration: none;"><p style="color: white; font-weight: bolder; font-size: 50px; margin-left: -540px; margin-top: 650px;">All Products</p></a>
+         <a href="{% url 'products' %}" style="text-decoration: none;"><p style="color: white; font-weight: bolder; font-size: 50px; margin-top: 650px;">All Products</p></a>
     </div>
 </section>
 </body>
